--- a/frontend/styles/output.css
+++ b/frontend/styles/output.css
@@ -56,9 +56,8 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-xs: 20rem;
-    --container-md: 28rem;
+    --container-sm: 24rem;
     --container-lg: 32rem;
-    --container-xl: 36rem;
     --container-2xl: 42rem;
     --container-3xl: 48rem;
     --container-5xl: 64rem;
@@ -290,6 +289,9 @@
   .-top-8 {
     top: calc(var(--spacing) * -8);
   }
+  .-top-12 {
+    top: calc(var(--spacing) * -12);
+  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
@@ -344,11 +346,20 @@
   .top-\[40\%\] {
     top: 40%;
   }
+  .top-full {
+    top: 100%;
+  }
   .-right-3 {
     right: calc(var(--spacing) * -3);
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
+  }
+  .right-1 {
+    right: calc(var(--spacing) * 1);
+  }
+  .right-1\/2 {
+    right: calc(1/2 * 100%);
   }
   .right-3 {
     right: calc(var(--spacing) * 3);
@@ -371,9 +382,6 @@
   .right-56 {
     right: calc(var(--spacing) * 56);
   }
-  .-bottom-10 {
-    bottom: calc(var(--spacing) * -10);
-  }
   .-bottom-16 {
     bottom: calc(var(--spacing) * -16);
   }
@@ -394,9 +402,6 @@
   }
   .-bottom-\[270px\] {
     bottom: calc(270px * -1);
-  }
-  .-bottom-\[500px\] {
-    bottom: calc(500px * -1);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -521,12 +526,6 @@
   .my-10 {
     margin-block: calc(var(--spacing) * 10);
   }
-  .my-20 {
-    margin-block: calc(var(--spacing) * 20);
-  }
-  .my-28 {
-    margin-block: calc(var(--spacing) * 28);
-  }
   .my-48 {
     margin-block: calc(var(--spacing) * 48);
   }
@@ -557,17 +556,11 @@
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
-  .mt-12 {
-    margin-top: calc(var(--spacing) * 12);
-  }
   .mt-14 {
     margin-top: calc(var(--spacing) * 14);
   }
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
-  }
-  .mt-24 {
-    margin-top: calc(var(--spacing) * 24);
   }
   .mt-28 {
     margin-top: calc(var(--spacing) * 28);
@@ -575,14 +568,8 @@
   .mt-32 {
     margin-top: calc(var(--spacing) * 32);
   }
-  .mt-36 {
-    margin-top: calc(var(--spacing) * 36);
-  }
   .mt-48 {
     margin-top: calc(var(--spacing) * 48);
-  }
-  .mt-52 {
-    margin-top: calc(var(--spacing) * 52);
   }
   .mt-56 {
     margin-top: calc(var(--spacing) * 56);
@@ -593,12 +580,6 @@
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
   }
-  .-mb-44 {
-    margin-bottom: calc(var(--spacing) * -44);
-  }
-  .mb-0 {
-    margin-bottom: calc(var(--spacing) * 0);
-  }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
@@ -608,17 +589,14 @@
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
   }
-  .mb-20 {
-    margin-bottom: calc(var(--spacing) * 20);
-  }
-  .mb-24 {
-    margin-bottom: calc(var(--spacing) * 24);
-  }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
   }
   .ml-3 {
     margin-left: calc(var(--spacing) * 3);
+  }
+  .ml-4 {
+    margin-left: calc(var(--spacing) * 4);
   }
   .ml-7 {
     margin-left: calc(var(--spacing) * 7);
@@ -705,6 +683,10 @@
     width: calc(var(--spacing) * 10);
     height: calc(var(--spacing) * 10);
   }
+  .size-11 {
+    width: calc(var(--spacing) * 11);
+    height: calc(var(--spacing) * 11);
+  }
   .size-12 {
     width: calc(var(--spacing) * 12);
     height: calc(var(--spacing) * 12);
@@ -775,14 +757,17 @@
   .h-\[42dvh\] {
     height: 42dvh;
   }
+  .h-\[50dvh\] {
+    height: 50dvh;
+  }
   .h-\[60dvh\] {
     height: 60dvh;
   }
+  .h-\[75dvh\] {
+    height: 75dvh;
+  }
   .h-\[80dvh\] {
     height: 80dvh;
-  }
-  .h-\[90dvh\] {
-    height: 90dvh;
   }
   .h-\[100dvh\] {
     height: 100dvh;
@@ -816,9 +801,6 @@
   }
   .max-h-56 {
     max-height: calc(var(--spacing) * 56);
-  }
-  .max-h-\[50dvh\] {
-    max-height: 50dvh;
   }
   .max-h-\[70dvh\] {
     max-height: 70dvh;
@@ -901,8 +883,14 @@
   .w-52 {
     width: calc(var(--spacing) * 52);
   }
+  .w-\[35\%\] {
+    width: 35%;
+  }
   .w-\[38\%\] {
     width: 38%;
+  }
+  .w-\[40\%\] {
+    width: 40%;
   }
   .w-\[80\%\] {
     width: 80%;
@@ -946,14 +934,17 @@
   .w-full {
     width: 100%;
   }
-  .w-md {
-    width: var(--container-md);
-  }
-  .w-xl {
-    width: var(--container-xl);
+  .w-lg {
+    width: var(--container-lg);
   }
   .w-xs {
     width: var(--container-xs);
+  }
+  .max-w-1 {
+    max-width: calc(var(--spacing) * 1);
+  }
+  .max-w-1\/2 {
+    max-width: calc(1/2 * 100%);
   }
   .max-w-2xl {
     max-width: var(--container-2xl);
@@ -985,6 +976,9 @@
   .max-w-11\/12 {
     max-width: calc(11/12 * 100%);
   }
+  .max-w-\[40\%\] {
+    max-width: 40%;
+  }
   .max-w-\[90\%\] {
     max-width: 90%;
   }
@@ -1000,12 +994,6 @@
   .max-w-full {
     max-width: 100%;
   }
-  .max-w-lg {
-    max-width: var(--container-lg);
-  }
-  .max-w-md {
-    max-width: var(--container-md);
-  }
   .min-w-20 {
     min-width: calc(var(--spacing) * 20);
   }
@@ -1014,6 +1002,9 @@
   }
   .min-w-full {
     min-width: 100%;
+  }
+  .min-w-sm {
+    min-width: var(--container-sm);
   }
   .flex-1 {
     flex: 1;
@@ -1068,6 +1059,22 @@
   }
   .translate-x-0 {
     --tw-translate-x: calc(var(--spacing) * 0);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * 1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .translate-x-1\/2 {
+    --tw-translate-x: calc(1/2 * 100%);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1 {
+    --tw-translate-y: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-1\/4 {
+    --tw-translate-y: calc(calc(1/4 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-3 {
@@ -1126,8 +1133,8 @@
     --tw-translate-y: 65%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-y-\[125\%\] {
-    --tw-translate-y: 125%;
+  .translate-y-\[150\%\] {
+    --tw-translate-y: 150%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-y-full {
@@ -1138,12 +1145,6 @@
     --tw-scale-x: 75%;
     --tw-scale-y: 75%;
     --tw-scale-z: 75%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
-  }
-  .scale-80 {
-    --tw-scale-x: 80%;
-    --tw-scale-y: 80%;
-    --tw-scale-z: 80%;
     scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .scale-90 {
@@ -1293,9 +1294,6 @@
       margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
-  .gap-x-0 {
-    column-gap: calc(var(--spacing) * 0);
-  }
   .gap-x-1 {
     column-gap: calc(var(--spacing) * 1);
   }
@@ -1413,6 +1411,9 @@
     --tw-border-style: none;
     border-style: none;
   }
+  .border-emerald-500 {
+    border-color: var(--color-emerald-500);
+  }
   .border-gray-100 {
     border-color: var(--color-gray-100);
   }
@@ -1424,6 +1425,9 @@
   }
   .border-red-500 {
     border-color: var(--color-red-500);
+  }
+  .border-red-600 {
+    border-color: var(--color-red-600);
   }
   .border-slate-300 {
     border-color: var(--color-slate-300);
@@ -1455,6 +1459,12 @@
   .bg-blue-600 {
     background-color: var(--color-blue-600);
   }
+  .bg-emerald-50 {
+    background-color: var(--color-emerald-50);
+  }
+  .bg-emerald-50\/50 {
+    background-color: color-mix(in oklab, var(--color-emerald-50) 50%, transparent);
+  }
   .bg-emerald-500 {
     background-color: var(--color-emerald-500);
   }
@@ -1469,6 +1479,9 @@
   }
   .bg-gray-500 {
     background-color: var(--color-gray-500);
+  }
+  .bg-gray-500\/25 {
+    background-color: color-mix(in oklab, var(--color-gray-500) 25%, transparent);
   }
   .bg-green-600 {
     background-color: var(--color-green-600);
@@ -1485,8 +1498,14 @@
   .bg-slate-50 {
     background-color: var(--color-slate-50);
   }
+  .bg-slate-50\/25 {
+    background-color: color-mix(in oklab, var(--color-slate-50) 25%, transparent);
+  }
   .bg-slate-100 {
     background-color: var(--color-slate-100);
+  }
+  .bg-slate-100\/25 {
+    background-color: color-mix(in oklab, var(--color-slate-100) 25%, transparent);
   }
   .bg-slate-200 {
     background-color: var(--color-slate-200);
@@ -1499,6 +1518,9 @@
   }
   .bg-slate-500 {
     background-color: var(--color-slate-500);
+  }
+  .bg-slate-500\/25 {
+    background-color: color-mix(in oklab, var(--color-slate-500) 25%, transparent);
   }
   .bg-slate-600 {
     background-color: var(--color-slate-600);
@@ -1533,8 +1555,15 @@
     --tw-gradient-position: to right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
+  .bg-gradient-to-tr {
+    --tw-gradient-position: to top right in oklab;
+    background-image: linear-gradient(var(--tw-gradient-stops));
+  }
   .bg-\[url\(\/frontend\/public\/background-card\.png\)\] {
     background-image: url(/frontend/public/background-card.png);
+  }
+  .bg-\[url\(\/frontend\/public\/img\/Smawa\.jpg\)\] {
+    background-image: url(/frontend/public/img/Smawa.jpg);
   }
   .from-emerald-50 {
     --tw-gradient-from: var(--color-emerald-50);
@@ -1548,6 +1577,10 @@
     --tw-gradient-from: var(--color-emerald-600);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
+  .from-emerald-700 {
+    --tw-gradient-from: var(--color-emerald-700);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .from-red-600 {
     --tw-gradient-from: var(--color-red-600);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
@@ -1558,6 +1591,9 @@
   }
   .from-3\% {
     --tw-gradient-from-position: 3%;
+  }
+  .from-5\% {
+    --tw-gradient-from-position: 5%;
   }
   .via-\[\#16C47F\] {
     --tw-gradient-via: #16C47F;
@@ -1580,6 +1616,10 @@
     --tw-gradient-to: var(--color-emerald-400);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
+  .to-emerald-600 {
+    --tw-gradient-to: var(--color-emerald-600);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .to-green-50 {
     --tw-gradient-to: var(--color-green-50);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
@@ -1591,6 +1631,9 @@
   .to-teal-500 {
     --tw-gradient-to: var(--color-teal-500);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-90\% {
+    --tw-gradient-to-position: 90%;
   }
   .to-95\% {
     --tw-gradient-to-position: 95%;
@@ -1649,11 +1692,8 @@
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
-  .px-20 {
-    padding-inline: calc(var(--spacing) * 20);
-  }
-  .px-52 {
-    padding-inline: calc(var(--spacing) * 52);
+  .px-16 {
+    padding-inline: calc(var(--spacing) * 16);
   }
   .py-0 {
     padding-block: calc(var(--spacing) * 0);
@@ -1703,6 +1743,9 @@
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
   }
+  .pt-\[2px\] {
+    padding-top: 2px;
+  }
   .pr-1 {
     padding-right: calc(var(--spacing) * 1);
   }
@@ -1717,6 +1760,9 @@
   }
   .pb-3 {
     padding-bottom: calc(var(--spacing) * 3);
+  }
+  .pl-2 {
+    padding-left: calc(var(--spacing) * 2);
   }
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
@@ -1911,6 +1957,14 @@
   }
   .underline {
     text-decoration-line: underline;
+  }
+  .placeholder-slate-500 {
+    &::placeholder {
+      color: var(--color-slate-500);
+    }
+  }
+  .opacity-0 {
+    opacity: 0%;
   }
   .opacity-10 {
     opacity: 10%;
@@ -2313,6 +2367,12 @@
       height: calc(var(--spacing) * 48);
     }
   }
+  .after\:h-52 {
+    &::after {
+      content: var(--tw-content);
+      height: calc(var(--spacing) * 52);
+    }
+  }
   .after\:w-16 {
     &::after {
       content: var(--tw-content);
@@ -2427,6 +2487,13 @@
       --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
     }
   }
+  .after\:from-slate-800 {
+    &::after {
+      content: var(--tw-content);
+      --tw-gradient-from: var(--color-slate-800);
+      --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+    }
+  }
   .after\:from-slate-800\/75 {
     &::after {
       content: var(--tw-content);
@@ -2452,6 +2519,20 @@
     &::after {
       content: var(--tw-content);
       --tw-gradient-from-position: 40%;
+    }
+  }
+  .after\:from-80\% {
+    &::after {
+      content: var(--tw-content);
+      --tw-gradient-from-position: 80%;
+    }
+  }
+  .after\:via-slate-700\/50 {
+    &::after {
+      content: var(--tw-content);
+      --tw-gradient-via: color-mix(in oklab, var(--color-slate-700) 50%, transparent);
+      --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
+      --tw-gradient-stops: var(--tw-gradient-via-stops);
     }
   }
   .after\:via-slate-800\/50 {
@@ -2584,6 +2665,13 @@
       }
     }
   }
+  .hover\:bg-emerald-500 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-emerald-500);
+      }
+    }
+  }
   .hover\:bg-emerald-700 {
     &:hover {
       @media (hover: hover) {
@@ -2616,6 +2704,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-red-500);
+      }
+    }
+  }
+  .hover\:bg-red-600 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-red-600);
       }
     }
   }
@@ -2856,11 +2951,6 @@
       opacity: 50%;
     }
   }
-  .disabled\:opacity-70 {
-    &:disabled {
-      opacity: 70%;
-    }
-  }
   .disabled\:opacity-80 {
     &:disabled {
       opacity: 80%;
@@ -2874,11 +2964,6 @@
   .sm\:p-6 {
     @media (width >= 40rem) {
       padding: calc(var(--spacing) * 6);
-    }
-  }
-  .md\:max-w-11\/12 {
-    @media (width >= 48rem) {
-      max-width: calc(11/12 * 100%);
     }
   }
   .md\:grid-cols-2 {
@@ -2911,6 +2996,21 @@
     @media (width >= 48rem) {
       font-size: var(--text-base);
       line-height: var(--tw-leading, var(--text-base--line-height));
+    }
+  }
+  .lg\:-top-2 {
+    @media (width >= 64rem) {
+      top: calc(var(--spacing) * -2);
+    }
+  }
+  .lg\:right-2 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * 2);
+    }
+  }
+  .lg\:-bottom-\[500px\] {
+    @media (width >= 64rem) {
+      bottom: calc(500px * -1);
     }
   }
   .lg\:left-1\/2 {
@@ -2989,6 +3089,12 @@
       translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
+  .lg\:translate-x-0 {
+    @media (width >= 64rem) {
+      --tw-translate-x: calc(var(--spacing) * 0);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
   .lg\:-translate-y-3\/4 {
     @media (width >= 64rem) {
       --tw-translate-y: calc(calc(3/4 * 100%) * -1);
@@ -3050,11 +3156,6 @@
       background-color: transparent;
     }
   }
-  .lg\:px-0 {
-    @media (width >= 64rem) {
-      padding-inline: calc(var(--spacing) * 0);
-    }
-  }
   .lg\:text-2xl {
     @media (width >= 64rem) {
       font-size: var(--text-2xl);
@@ -3097,29 +3198,9 @@
       right: 49.5px;
     }
   }
-  .xl\:-bottom-14 {
-    @media (width >= 80rem) {
-      bottom: calc(var(--spacing) * -14);
-    }
-  }
-  .xl\:-bottom-16 {
-    @media (width >= 80rem) {
-      bottom: calc(var(--spacing) * -16);
-    }
-  }
   .xl\:-bottom-20 {
     @media (width >= 80rem) {
       bottom: calc(var(--spacing) * -20);
-    }
-  }
-  .xl\:-bottom-24 {
-    @media (width >= 80rem) {
-      bottom: calc(var(--spacing) * -24);
-    }
-  }
-  .xl\:-bottom-28 {
-    @media (width >= 80rem) {
-      bottom: calc(var(--spacing) * -28);
     }
   }
   .xl\:-bottom-42 {
